# dota2_match_predictor

./: .env  .gitignore  README.md  dota2_models.ipynb  entry.py  pyproject.toml  requirements.txt
data_service/: build_db.py
dota2_predictor/data_service/: build_db.py  consts.py  format_data.py
dota2_predictor/models/: embedder.py  logistic_regression.py  neural_net.py  neural_net2
src/data_service/: build_db.py  format_data.py  retrieve_data.py
src/models/: logistic_regression.py  neural_net.py
