[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota2_predictor"
version = "0.0.1"
description = "Dota 2 match outcome prediction"


# Explicitly define where the Python files are located
[tool.setuptools]
packages = ["dota2_predictor"]

# This will include any .py files in the package
[tool.setuptools.package-data]
"*" = ["*.py"]